--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
+  "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
